--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,61 @@ img {
   text-shadow: black 0.1em 0.1em 0.2em;
 }
 
+/* css productos */
+
+.productos {
+  display: flex;
+  justify-content: center;
+}
+
+.productos h2 {
+  font-size: 4rem;
+  color: rgb(12, 21, 209);
+  padding-bottom: 10rem;
+  align-items: center;
+}
+.cat {
+  padding-right: 15rem;
+}
+.cat ul a {
+  color: rgb(22, 8, 146);
+  font-size: 2rem;
+}
+.cat li {
+  list-style: none;
+  list-style-type: none;
+}
+.cat a:hover {
+  color: grey;
+}
+
+.boxessale {
+  display: flex;
+  padding-top: 4rem;
+  align-items: center;
+}
+
+.boxsale {
+  color: white;
+  text-align: center;
+  flex: 1 1 30%;
+  align-items: center;
+  font-size: 1.5rem;
+  letter-spacing: 1px;
+  margin: 5px 5px 5px 5px;
+  background: rgba(17, 63, 103, 0.3);
+}
+
+.boxsale p {
+  padding-bottom: 20px;
+}
+
+.boxsale img {
+  height: 170px;
+  align-items: center;
+  padding-bottom: 3rem;
+}
+
 /* mobile inicio y productos */
 
 @media screen and (max-width: 480px) {
@@ -347,70 +402,29 @@ img {
   .productos h2 {
     font-size: 4rem;
     color: white;
-    padding-bottom: 10rem;
-    align-items: center;
+    padding-bottom: 4rem;
   }
   .cat ul a {
     color: rgb(220, 218, 231);
-    font-size: 2rem;
+    font-size: 1.5rem;
+    margin-top: 0;
+    margin-bottom: 4rem;
+  }
+  .cat ul {
+    padding-bottom: 4rem;
+  }
+
+  .productos {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: 11;
+  }
+  .cat {
+    justify-content: center;
+    align-items: center;
+    padding-right: 0rem;
   }
 }
-
-/* css productos */
-
-.productos {
-  display: flex;
-  justify-content: center;
-}
-
-.productos h2 {
-  font-size: 4rem;
-  color: rgb(12, 21, 209);
-  padding-bottom: 10rem;
-  align-items: center;
-}
-.cat {
-  padding-right: 15rem;
-}
-.cat ul a {
-  color: rgb(22, 8, 146);
-  font-size: 2rem;
-}
-.cat li {
-  list-style: none;
-  list-style-type: none;
-}
-.cat a:hover {
-  color: grey;
-}
-
-.boxessale {
-  display: flex;
-  padding-top: 4rem;
-  align-items: center;
-}
-
-.boxsale {
-  color: white;
-  text-align: center;
-  flex: 1 1 30%;
-  align-items: center;
-  font-size: 1.5rem;
-  letter-spacing: 1px;
-  margin: 5px 5px 5px 5px;
-  background: rgba(17, 63, 103, 0.3);
-}
-
-.boxsale p {
-  padding-bottom: 20px;
-}
-
-.boxsale img {
-  height: 170px;
-  align-items: center;
-  padding-bottom: 3rem;
-}
-
 /* css formulario */
 
 form {
